src/components/SplashViz/SplashViz.scss
@import "functions";
@import "vars";
@import "mixins";

.splash-viz {
  position: relative;
  height: calc(100vh - 56px);
  min-height: 320px;
  max-height: 720px;
  background: getColor(elephant);
  display: grid;
  grid-template-rows: auto 1fr;
  overflow: hidden;
  padding-bottom: 4rem;
  padding: 1rem;

  &__heading {
    color: getColor(white);
    font-size: getFontSize(4);
    text-align: center;
    font-weight: 200;
    margin-top: 80px;

    grid-row: 1/2;
    @include break {
      font-size: getFontSize(5);
      margin-top: 110px;
    }
  }

  &__modules {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60vw;
    min-width: 550px;
    max-width: map-get($screens, medium);
    margin: 0 auto;
    transform: translate(-50%, -50%);
    display: none;
    grid-row: 2/3;
    @include break {
      display: block;
    }

    img {
      padding-top: 1rem;
      width: 100%;
      height: 100%;
    }
  }

  &__cube {
    position: relative; // changed from absolute
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    z-index: 1;
    grid-row: 2/3;
  }
}

